--- a/res/layout/nueva_encuesta_parte2.xml
+++ b/res/layout/nueva_encuesta_parte2.xml
@@ -14,6 +14,17 @@
             android:textAppearance="@style/TextViewEstiloSeguimiento"
             android:textStyle="bold" />
 
+    <TextView
+            android:id="@+id/txtvIndiqueValor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="10dp"
+            android:layout_below="@+id/txtvPregunta2"
+            android:text="Indique el valor por cada acápite"
+            android:textAppearance="@style/TextViewEstiloSeguimiento"
+            android:textStyle="bold" />
+
     <!--PREGUNTA1-->
     <CheckBox
             android:id="@+id/chkCalidadAtencionMed"
@@ -22,14 +33,14 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/txtvPregunta2"
             android:layout_marginLeft="7dp"
-            android:layout_marginTop="25dp" />
+            android:layout_marginTop="45dp" />
     <TextView
             android:id="@+id/txtvCalidadAtencionMed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/txtvPregunta2"
             android:layout_marginLeft="5dp"
-            android:layout_marginTop="18dp"
+            android:layout_marginTop="50dp"
             android:layout_toRightOf="@+id/chkCalidadAtencionMed"
             android:text="2.1 La calidad de atención médica y exámenes de laboratorio se ajusta a las necesidades médicas y de salud de mi hijo/a."
             android:textAppearance="@style/TextViewEstiloSeguimiento" />
