RecepcionPbmc en supervisor
Se agrego la recepción de muestra pbmc con rojo adicional, se quito la pregunta de sero prevalencia, se agrego la variable ENCUESTA_VALIDA a las encuestas y fecha_enrolamiento en participantes procesos

--- a/res/values/strings_muestras.xml
+++ b/res/values/strings_muestras.xml
@@ -142,4 +142,5 @@
     <string name="tuboCitratoHint">Tubo Amarillo</string>
     <string name="codigoMxCitrato">Escanee código de muestra Citrato</string>
 
+    <string name="volumen_rojo_adicional">Volumen Rojo Adicional</string>
 </resources>
