--- a/res/values/menu_supervisor.xml
+++ b/res/values/menu_supervisor.xml
@@ -3,6 +3,7 @@
     <string-array name="menu_sup">
         <item>Recepción BHC..</item>
 		<item>Recepción Rojo..</item>
+		<item>Recepción PBMC - Rojo Adicional..</item>
 		<item>Temp PBMC..</item>
 		<item>Temp Rojo y BHC..</item>
 		<item>Pinchazos..</item>
